--- a/custom.css
+++ b/custom.css
@@ -3,3 +3,23 @@
 mark {
   background-color: rgba(255, 255, 0, 0.8);
 }
+
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.container div {
+}
+
+.reveal .imagesource {
+  font-size: 8pt;
+  margin: -10px 0;
+  text-align: right;
+}
+
+.reveal section img {
+    max-width: 100%;
+    margin: 5px 0;
+}
